# CalVR-For-Android

./: .gitattributes  .gitignore  README.md
ARCalVR/app/: CMakeLists-buildCALVR-PLUGIN.txt  CMakeLists-buildCALVR.txt  CMakeLists-buildMXML.txt  CMakeLists-staticCALVR.txt  CMakeLists-staticDependencies.txt  CMakeLists-staticEIGEN.txt  CMakeLists-staticMXML.txt  CMakeLists-staticOSG.txt  CMakeLists.txt  build.gradle
ARCalVR/app/libs/: staticLibs.7z
ARCalVR/app/makefiles/: CMakeLists-buildDependencies.txt  CMakeLists-staticDependencies.txt
ARCalVR/app/src/androidTest/java/com/samsung/arcalvr/: ExampleInstrumentedTest.java
ARCalVR/app/src/main/: AndroidManifest.xml
ARCalVR/app/src/main/assets/calvrAssets/config/: config.xml
ARCalVR/app/src/main/assets/calvrAssets/resources/dcm/: seq214-loc040475.dcm  seq214-loc047475.dcm  seq214-loc050975.dcm  seq214-loc054475.dcm  seq214-loc057975.dcm  seq214-loc061475.dcm  seq214-loc064975.dcm  seq214-loc075475.dcm  seq214-loc078975.dcm  seq214-loc082475.dcm  seq214-loc092975.dcm  seq214-loc099975.dcm  seq214-loc106975.dcm  seq214-loc110475.dcm  seq214-loc120975.dcm  seq214-loc127975.dcm  seq214-loc138475.dcm  seq214-loc145475.dcm  seq214-loc148975.dcm  seq214-loc159475.dcm  seq214-loc162975.dcm  seq214-loc166475.dcm  seq214-loc173475.dcm  seq214-loc180475.dcm  seq214-loc183975.dcm  seq214-loc190975.dcm
ARCalVR/app/src/main/assets/shaders/: bbox.vert  compLightOSG.frag  compLightOSG.vert  dcmOSG.frag  dcmOSG.vert  lighting.frag  object.frag  object.vert  objectOSG.frag  objectOSG.vert  objectPhong.frag  objectPhong.vert  objectSH.frag  objectSH.vert  plane.frag  plane.vert  point.vert  quad.frag  quad.vert  raycastVolume.frag  raycastVolume.vert  screenquad.frag  screenquad.vert  simpleOSG.frag  simpleOSG.vert  stroke.vert  stroke_screen.vert  textureVolume.frag  wall.frag  wall.vert
ARCalVR/app/src/main/cpp/: allController.cpp  allController.h  bgDrawable.cpp  bgDrawable.h  jni_interface.cpp  jni_interface.h  perfMonitor.h
ARCalVR/app/src/main/cpp/plugins/: PhysxBall.rar
ARCalVR/app/src/main/cpp/plugins/GlesDrawables/: CMakeLists.txt  drawablesEntrance.cpp  drawablesEntrance.h  pano.cpp  pano.h  planeDrawable.cpp  planeDrawable.h  pointDrawable.cpp  pointDrawable.h  strokeDrawable.cpp  strokeDrawable.h
ARCalVR/app/src/main/cpp/plugins/PhysxBall/: PhysxBall.cpp  PhysxBall.h
ARCalVR/app/src/main/cpp/plugins/SpatialViz/: CMakeLists.txt  Polyomino.hpp  PuzzleGenerator.hpp  SpatialViz.cpp  SpatialViz.h  pointDrawable.h
ARCalVR/app/src/main/cpp/plugins/SpatialViz/5PiecePuzzle/: cube1of5.dae  cube1of5.mtl  cube2of5.dae  cube2of5.mtl  cube3of5.dae  (+5 more)
ARCalVR/app/src/main/res/drawable/: ic_toast_double_check.xml
ARCalVR/app/src/main/res/layout/: activity_main.xml  toast_layout.xml
ARCalVR/app/src/main/res/values/: colors.xml  strings.xml  styles.xml
ARCalVRGPU/app/: CMakeLists.txt  build.gradle
ARCalVRGPU/app/src/main/: AndroidManifest.xml
ARCalVRGPU/app/src/main/cpp/: allController.cpp  allController.h  jni_interface.cpp  jni_interface.h
ARCalVRGPU/app/src/main/res/layout/: activity_main.xml
ARCalVRGPU/app/src/main/res/values/: strings.xml
ARCalVRGPU/app/src/main/rs/: yuv2rgb.rs
myGLES/app/: CMakeLists-buildCALVR.txt  CMakeLists-buildOSG.txt  CMakeLists-glTriangle.txt  CMakeLists-osgScene.txt  CMakeLists-simpleCalVR.txt  CMakeLists-staticMXML.txt  CMakeLists-staticOSG.txt  CMakeLists-staticPhysX.txt  CMakeLists.txt  build.gradle
myGLES/app/src/main/: AndroidManifest.xml
myGLES/app/src/main/assets/shaders/: osgObject.frag  osgObject.vert  osgPoint.vert  osgTexture.frag  osgTexture.vert  plane.frag  plane.vert  point.frag  point.vert  pointDrawable.vert  text.frag
myGLES/app/src/main/cpp/: SpatialViz.cpp  SpatialViz.h  Stroke.cpp  Stroke.h  TextureAC.cpp  TextureAC.h  allController.cpp  allController.h  anchorRenderer.cpp  anchorRenderer.h  arcoreController.cpp  arcoreController.h  arcore_utils.cpp  arcore_utils.h  backgroundRenderer.cpp  backgroundRenderer.h  bgDrawable.cpp  bgDrawable.h  calvrController.cpp  calvrController.h  cameraRenderer.cpp  cameraRenderer.h  characterDrawable.cpp  characterDrawable.h  drawPrimitive.cpp  drawPrimitive.h  drawTriangle.cpp  freetypeDrawable.cpp  freetypeDrawable.h  gesture_controller.cpp  gesture_controller.h  glDrawable.cpp  glDrawable.h  glTestDrawable.cpp  glTestDrawable.h  jni_interface.cpp  jni_interface.h  jni_interface_all.cpp  jni_interface_all.h  jni_interface_calvr.cpp  (+37 more)
myGLES/app/src/main/cpp/plugins/PhysxBall/: CMakeLists.txt  Engine.cpp  Engine.h  PhysxBall.cpp  PhysxBall.h  pointDrawable.cpp  pointDrawable.h
myGLES/app/src/main/cpp/plugins/SpatialViz/: CMakeLists.txt
myGLES/app/src/main/cpp/plugins/common/: AndroidPreloadPlugins.cpp
myGLES/app/src/main/res/layout/: activity_ar_template.xml  activity_cal_vr.xml  activity_osg_interaction.xml  activity_simple_osg.xml
myGLES/app/src/main/res/menu/: pop_menu.xml
myGLES/app/src/main/res/raw/: gesture.txt
myGLES/app/src/main/res/values/: strings.xml  styles.xml
testApp/app/: CMakeLists.txt  build.gradle
testApp/app/src/androidTest/java/lapras/testapp/: ExampleInstrumentedTest.java
testApp/app/src/main/: AndroidManifest.xml
testApp/app/src/main/assets/shaders/: IntersectionPlane.frag  IntersectionPlane.vert  colorViz.frag  colorViz.vert  cube.frag  cube.vert  naive.frag  naive.vert  opaViz.frag  opaViz.vert  raycastVolume.frag  raycastVolume.vert  textureVolume.frag  textureVolume.vert
testApp/app/src/main/cpp/: AndroidHelper.cpp  AndroidHelper.h  Color.h  dcmRenderer.cpp  dcmRenderer.h  funcsRenderer.cpp  funcsRenderer.h  jni_interface.cpp  jni_interface.h  perfMonitor.cpp
testApp/app/src/main/java/lapras/testapp/: GestureDetectorCalVR.java  JNIInterface.java  MainActivity.java  MultiFingerTapDetector.java  UIsController.java  dcmImage.java  fileUtils.java
testApp/app/src/main/res/layout/: activity_main.xml
testApp/app/src/main/res/values/: arrays.xml  colors.xml  ic_launcher_background.xml  strings.xml  styles.xml
testApp/app/src/test/java/lapras/testapp/: ExampleUnitTest.java
(+146 files in other folders)
