SET(LIB_NAME SpatialViz)
SET(PLUGIN_HEADERS
    SpatialViz.h
)

IF(ANDROID)
	ADD_LIBRARY(${LIB_NAME}
        	STATIC
    		${PLUGIN_HEADERS}
    		SpatialViz.cpp
    	)
ELSE(ANDROID)
    	ADD_LIBRARY(${LIB_NAME}
    		SHARED
        	${PLUGIN_HEADERS}
        	SpatialViz.cpp
    	)
ENDIF(ANDROID)

add_definitions(-DNDEBUG)
add_definitions(-DHAVE_PHYSX)

message("=== In SpatialViz CMake ===")

IF(NOT ANDROID)
	FIND_PACKAGE(PhysX)
ENDIF(NOT ANDROID)

INCLUDE_DIRECTORIES(${OSG_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${PHYSX_INCLUDE_DIR})

IF(NOT ANDROID)
	TARGET_LINK_LIBRARIES(${LIB_NAME} ${OSG_LIBRARIES})
	TARGET_LINK_LIBRARIES(${LIB_NAME} ${PHYSX_LIBRARIES})

ELSE(NOT ANDRDOID)
	TARGET_LINK_LIBRARIES(  ${LIB_NAME}
				${KERNEL_LIBRARIES}
				${PHYSX_LIBS}
	)
ENDIF(NOT ANDROID)

ADD_CALVR_LIBRARIES(${LIB_NAME})

IF(NOT ANDROID)
	INSTALL(TARGETS ${LIB_NAME} DESTINATION lib/plugins)
ENDIF(NOT ANDROID)
