SET(LIB_NAME PhysxBall)
SET(PLUGIN_HEADERS
    PhysxBall.h
)
SET(PHYX_HEADERS
    Engine.h)
SET(PHYX_CPP
    Engine.cpp)


IF(ANDROID)
	ADD_LIBRARY(${LIB_NAME}
		STATIC
		PhysxBall.cpp
		${PLUGIN_HEADERS}
		${PHYX_CPP}
	)
ELSE(ANDROID)
	ADD_LIBRARY(${LIB_NAME}
		SHARE
		PhysxBall.cpp
		${PLUGIN_HEADERS}
		${PHYX_CPP}
	)
ENDIF(ANDROID)

add_definitions(-DNDEBUG)
add_definitions(-DHAVE_PHYSX)

IF(NOT ANDROID)
	FIND_PACKAGE(PhysX)
ENDIF(NOT ANDROID)

INCLUDE_DIRECTORIES(${OSG_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${PHYSX_INCLUDE_DIR})

IF(NOT ANDROID)
	TARGET_LINK_LIBRARIES(${LIB_NAME} ${OSG_LIBRARIES})
	TARGET_LINK_LIBRARIES(${LIB_NAME} ${PHYSX_LIBRARIES})
ELSE(NOT ANDROID)
	TARGET_LINK_LIBRARIES(
		${LIB_NAME}
		${PHYSX_LIBS}
		${KERNEL_LIBRARIES}
	)
ENDIF(NOT ANDROID)

ADD_CALVR_LIBRARIES(${LIB_NAME})

IF(NOT ANDROID)
	INSTALL(TARGETS ${LIB_NAME} DESTINATION lib/plugins)
ENDIF(NOT ANDROID)

