SET(LIB_NAME SpatialViz)
SET(PLUGIN_HEADERS
    SpatialViz.h
)

IF(ANDROID)
	ADD_LIBRARY(${LIB_NAME}
		STATIC
		${PLUGIN_HEADERS}
		SpatialViz.cpp
	)
ELSE(ANDROID)
	ADD_LIBRARY(${LIB_NAME}
		SHARE
		${PLUGIN_HEADERS}
		SpatialViz.cpp
	)
ENDIF(ANDROID)

add_definitions(-DNDEBUG)
add_definitions(-DHAVE_PHYSX)

IF(NOT ANDROID)
	FIND_PACKAGE(PhysX)
ENDIF(NOT ANDROID)

INCLUDE_DIRECTORIES(${OSG_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${PHYSX_INCLUDE_DIR})

IF(NOT ANDROID)
	TARGET_LINK_LIBRARIES(${LIB_NAME} ${OSG_LIBRARIES})
	TARGET_LINK_LIBRARIES(${LIB_NAME} ${PHYSX_LIBRARIES})
ELSE(NOT ANDROID)
	TARGET_LINK_LIBRARIES(
		${LIB_NAME}
		${PHYSX_LIBS}
		${KERNEL_LIBRARIES}
	)
ENDIF(NOT ANDROID)

ADD_CALVR_LIBRARIES(${LIB_NAME})

IF(NOT ANDROID)
	INSTALL(TARGETS ${LIB_NAME} DESTINATION lib/plugins)
ENDIF(NOT ANDROID)

